[tool.poetry]
name = "fsworld-analysis"
version = "0.1.0"
description = ""
authors = ["jazzpi <jasper@mezzo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.2"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20240521"
types-beautifulsoup4 = "^4.12.0.20240511"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
